<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_opSearch"
        android:title="@string/menu_opSearch"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="0"
        tools:ignore="MenuTitle"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/menu_op1"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="1"
        android:alphabeticShortcut="P"
        android:title="@string/menu_op1"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/menu_op2"
        android:icon="@android:drawable/ic_menu_compass"
        android:orderInCategory="2"
        android:alphabeticShortcut="U"
        android:title="@string/menu_op2"
        tools:ignore="MenuTitle"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_op3"
        android:icon="@android:drawable/ic_menu_agenda"
        android:orderInCategory="3"
        android:alphabeticShortcut="A"
        android:title="@string/menu_op3"
        tools:ignore="MenuTitle"
        app:showAsAction="ifRoom|withText">

        <menu>
            <item android:title="@string/menu_op3_1"
                android:orderInCategory="4"
                android:id="@+id/SubMnuOpc1" />

            <item android:title="@string/menu_op3_2"
                android:orderInCategory="5"
                android:id="@+id/SubMnuOpc2" />
        </menu>
    </item>

</menu>
